# advanced-data-mining-project

./: .gitignore  .pre-commit-config.yaml  Changelog.md  README.md  justfile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/res/: .bashrc  post_create_command.bash
scripts/: perform_eda.py  process_dataset.py  scrape_google_reviews.py  summarize_experiment.py  train_model.py
scripts/cfg/: perform_eda.yaml  process_dataset.yaml  scrape_google_reviews.yaml  summarize_experiment.yaml  train_model.yaml
src/advanced_data_mining/data/: ds_loading.py  eda.py  experiments_summary.py  maps_browser.py  raw_ds.py  structs.py  text_processing.py
src/advanced_data_mining/model/: modules.py  rating_predictor.py  torchkan.py
src/advanced_data_mining/utils/: logging_utils.py  misc.py
src/advanced_data_mining/utils/res/: logging_cfg.yaml
