[project]
name = "advanced_data_mining"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3.2",
    "playwright>=1.55.0",
    "tqdm>=4.67.1",
    "nltk>=3.9.2",
    "gruut>=2.4.0",
    "pandas>=2.3.3",
    "matplotlib>=3.10.7",
    "transformers>=4.57.1",
    "torch>=2.8.0",
    "lightning>=2.5.5"
]

[project.optional-dependencies]
dev = [
    "pylint>=3.1.0",
    "autopep8>=2.3.2",
    "mypy>=1.17.1",
    "ipykernel>=7.0.1",
    "pre-commit>=4.3.0"
]
